--- a/TFG_Projects_APP_Frontend/Components/ConceptComponents/NoteComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/ConceptComponents/NoteComponent.xaml
@@ -4,6 +4,9 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <Border BackgroundColor="White">
+        <Border.StrokeShape>
+            <RoundRectangle CornerRadius="5" />
+        </Border.StrokeShape>
         <StackLayout Padding="10">
             <Label
                 FontAttributes="Bold"
