--- a/TFG_Projects_APP_Frontend/Components/ConceptComponents/ConceptBoardComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/ConceptComponents/ConceptBoardComponent.xaml
@@ -2,10 +2,11 @@
 <ContentView
     x:Class="TFG_Projects_APP_Frontend.Components.ConceptComponents.ConceptBoardComponent"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-    <Border Padding="10" BackgroundColor="DarkGrey">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:properties="clr-namespace:TFG_Projects_APP_Frontend.Properties">
+    <Border Padding="20" BackgroundColor="{DynamicResource ConceptBoard}">
         <Border.StrokeShape>
-            <RoundRectangle CornerRadius="16" />
+            <RoundRectangle CornerRadius="15" />
         </Border.StrokeShape>
         <Label
             FontAttributes="Bold"
