--- a/TFG_Projects_APP_Frontend/Components/TaskComponents/ProgressSectionComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/TaskComponents/ProgressSectionComponent.xaml
@@ -2,8 +2,9 @@
 <ContentView
     x:Class="TFG_Projects_APP_Frontend.Components.TaskComponents.ProgressSectionComponent"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-    <Border Padding="5">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:properties="clr-namespace:TFG_Projects_APP_Frontend.Properties">
+    <Border Padding="5" MinimumWidthRequest="200">
         <Grid RowSpacing="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -13,37 +14,45 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <StackLayout
-                Grid.Row="0"
-                Orientation="Horizontal"
-                Spacing="5">
+            <Grid Grid.Row="0" Padding="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
                 <Button
+                    Grid.Column="0"
                     BackgroundColor="{DynamicResource Transparent}"
                     Clicked="Left_Clicked"
                     Text="&lt;"
                     TextColor="{StaticResource Gray500}" />
-                <Label Text="{Binding Title}" />
+                <Label
+                    Grid.Column="1"
+                    HorizontalOptions="Center"
+                    Text="{Binding Title}"
+                    VerticalOptions="Center" />
                 <Button
+                    Grid.Column="2"
                     BackgroundColor="{DynamicResource Transparent}"
                     Clicked="Right_Clicked"
                     Text="&gt;"
                     TextColor="{StaticResource Gray500}" />
-            </StackLayout>
+            </Grid>
             <Button
                 Grid.Row="1"
                 BackgroundColor="{DynamicResource Edit}"
                 Clicked="Edit_Clicked"
-                Text="Edit" />
+                Text="{x:Static properties:Resources.EditButton}" />
             <Button
                 Grid.Row="2"
                 BackgroundColor="{DynamicResource Delete}"
                 Clicked="Delete_Clicked"
-                Text="Delete" />
+                Text="{x:Static properties:Resources.DeleteButton}" />
             <Button
                 Grid.Row="3"
                 BackgroundColor="{DynamicResource Create}"
                 Clicked="Create_Task_Clicked"
-                Text="Create Task" />
+                Text="{x:Static properties:Resources.CreateTaskButton}" />
             <Border
                 Grid.Row="4"
                 Padding="10"
@@ -54,7 +63,7 @@
                 <Label
                     x:Name="DropZone"
                     HorizontalOptions="Center"
-                    Text="Drop Here" />
+                    Text="{x:Static properties:Resources.DropZone}" />
             </Border>
             <ScrollView Grid.Row="5">
                 <StackLayout
@@ -62,7 +71,7 @@
                     Padding="10"
                     BackgroundColor="Transparent"
                     IsClippedToBounds="True"
-                    Spacing="10"/>
+                    Spacing="10" />
             </ScrollView>
         </Grid>
     </Border>
