--- a/TFG_Projects_APP_Frontend/Components/TaskComponents/TaskSectionComponent.xaml
+++ b/TFG_Projects_APP_Frontend/Components/TaskComponents/TaskSectionComponent.xaml
@@ -5,8 +5,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:components="clr-namespace:TFG_Projects_APP_Frontend.Components.TaskComponents"
     xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
+    xmlns:properties="clr-namespace:TFG_Projects_APP_Frontend.Properties"
     x:DataType="models:TaskSection">
-    <Border Padding="5">
+    <Border Padding="5" MinimumWidthRequest="200">
         <Grid RowSpacing="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -17,37 +18,46 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <StackLayout
-                Grid.Row="0"
-                Orientation="Horizontal"
-                Spacing="5">
+            <Grid Grid.Row="0" Padding="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
                 <Button
+                    Grid.Column="0"
                     BackgroundColor="{DynamicResource Transparent}"
-                    TextColor="{StaticResource Gray500}"
                     Clicked="Left_Clicked"
-                    Text="&lt;" />
-                <Label Text="{Binding Title}" />
+                    Text="&lt;"
+                    TextColor="{StaticResource Gray500}" />
+                <Label
+                    Grid.Column="1"
+                    HorizontalOptions="Center"
+                    Text="{Binding Title}"
+                    VerticalOptions="Center" />
                 <Button
+                    Grid.Column="2"
                     BackgroundColor="{DynamicResource Transparent}"
-                    TextColor="{StaticResource Gray500}"
                     Clicked="Right_Clicked"
-                    Text="&gt;" />
-            </StackLayout>
+                    Text="&gt;"
+                    TextColor="{StaticResource Gray500}" />
+            </Grid>
             <Button
                 Grid.Row="1"
                 BackgroundColor="{DynamicResource Edit}"
                 Clicked="Edit_Clicked"
-                Text="Edit" />
+                Text="{x:Static properties:Resources.EditButton}" />
             <Button
                 Grid.Row="2"
                 BackgroundColor="{DynamicResource Delete}"
                 Clicked="Delete_Clicked"
-                Text="Delete" />
+                Text="{x:Static properties:Resources.DeleteButton}" />
             <Button
                 Grid.Row="3"
                 BackgroundColor="{DynamicResource Create}"
                 Clicked="Create_Task_Clicked"
-                Text="Create Task" />
+                Text="{x:Static properties:Resources.CreateTaskButton}" />
             <Border
                 Grid.Row="4"
                 Padding="10"
@@ -58,7 +68,7 @@
                 <Label
                     x:Name="DropZone"
                     HorizontalOptions="Center"
-                    Text="Drop Here" />
+                    Text="{x:Static properties:Resources.DropZone}" />
             </Border>
             <ScrollView Grid.Row="5">
                 <StackLayout
